crates/vihaco-parser/tests/compile_errors/pattern_index_overflow.stderr
error: invalid pattern: binding index must be a valid number
 --> tests/compile_errors/pattern_index_overflow.rs:9:17
  |
9 |     #[pattern = "'load $4294967296"]
  |                 ^^^^^^^^^^^^^^^^^^^
